# raspberry-pi-pico-c-fedora

./: .gitignore  README.md  build.sh  clean.sh  pico_setup.sh
adc/: CMakeLists.txt  README.md  main.c
adc/doc/: adc.fzz
blink/: CMakeLists.txt  README.md  main.c
button_irq/: CMakeLists.txt  README.md  main.c
button_irq/doc/: button_irq.fzz
chronometer/: CMakeLists.txt  README.md  main.c
chronometer/doc/: seven_segment_display.fzz
four_seven_segment_display/: CMakeLists.txt  README.md  main.c
four_seven_segment_display/doc/: seven_segment_display.fzz
i2c_lcd_1602/: CMakeLists.txt  README.md  main.c
i2c_lcd_1602/doc/: i2c_lcd.fzz
i2c_lcd_1602_adc/: CMakeLists.txt  README.md  main.c
i2c_lcd_1602_adc/doc/: i2c_lcd.fzz
i2c_lcd_1602_temp/: CMakeLists.txt  README.md  main.c
pwm/: CMakeLists.txt  README.md  main.c
pwm_adc/: CMakeLists.txt  README.md  main.c
pwm_adc_servo/: CMakeLists.txt  README.md  main.c
pwm_adc_servo/doc/: adc.fzz
pwm_servo/: CMakeLists.txt  README.md  main.c
pwm_servo/doc/: adc.fzz
seven_segment_display/: CMakeLists.txt  README.md  main.c
seven_segment_display/doc/: seven_segment_display.fzz
temperature/: CMakeLists.txt  README.md  main.c
timer_irq/: CMakeLists.txt  README.md  main.c
